--- a/main.css
+++ b/main.css
@@ -39,9 +39,18 @@ body {
     border: solid black 1px;
     height:100px;
 }
-
+img {
+  padding-left:5px;
+  padding-top:5px;
+  width:10px;
+  height:10px;
+  transform:scale(10);
+}
 p {
-    font-style:italic;
+  width:9px;
+  margin:0;
+  padding:0;
+      font-style:italic;
     font-size:12px;
 }
 
@@ -83,4 +92,9 @@ html, body {
     100% {
       background-size: 2.375em 2.375em, 0.1em 0.1em;
     }
+  }
+
+  #yoof {
+    box-shadow: 10px 10px 8px 10px #888888;
+    background-color:green;
   }
